Add Token cfg (for production you need to buy one)

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,10 @@
   },
   "Data": {
     "ConnectionString": "Data Source=Ionut-PC\\Ionut;Initial Catalog=TTTry_Car_2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }, 
+   "Tokens": {
+    "Key": "gfgfjghffffffffffgfjhgfjfgjgfjfjfg",
+    "Issuer": "http://mytokenissuer.com",
+    "Audience": "http://mytokenissuer.com"
   }
 }
